<resources>
    <string name="app_name">PinyPort</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="customers">Customers</string>
    <string name="profile">Profile</string>
    <string name="back_to_home">Back to home\n</string>
    <string name="new_chat">New chat\n</string>
    <string name="chat_view">Chat view\n</string>
    <string name="filter">Filter</string>
    <string name="clear_all">Clear All</string>
    <string name="cancel">Cancel</string>
    <string name="select_method">Select method</string>
    <string name="payment_method_prompt">Payment method</string>
</resources>