<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/orders_icon"
        android:title="@string/orders" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_icon"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_customers"
        android:icon="@drawable/customer_icon"
        android:title="@string/customers" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />

</menu>