<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.pinyport.ui.orders.OrdersFragment"
        android:label="Orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailFragment"
            app:destination="@id/orderDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_customers"
        android:name="com.example.pinyport.ui.customers.CustomersFragment"
        android:label="Customers"
        tools:layout="@layout/fragment_customers">
        <action
            android:id="@+id/action_customersFragment_to_customerDetailFragment"
            app:destination="@id/customer_detail_navigation" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pinyport.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pinyport.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.pinyport.ui.chat.ChatFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pinyport.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_chat_detail"
        android:name="com.example.pinyport.ui.chat.ChatDetailFragment"
        android:label="@string/new_chat"
        tools:layout="@layout/fragment_chat_detail" />

    <fragment
        android:id="@+id/orderDetailFragment"
        android:name="com.example.pinyport.ui.orders.OrderDetailFragment"
        android:label="Order Detail"
        tools:layout="@layout/order_detail_fragment" />
    <fragment
        android:id="@+id/customer_detail_navigation"
        android:name="com.example.pinyport.ui.customers.CustomerDetailFragment"
        android:label="Order Detail"
        tools:layout="@layout/fragment_customer_details">
        <action
            android:id="@+id/action_customerDetailFragment_to_orderDetailFragment"
            app:destination="@id/orderDetailFragment" />
    </fragment>
</navigation>
