<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/filter_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginBottom="55dp">

        <!-- Header with Cancel and Clear All options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/cancel_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="#006FFD"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textStyle="bold"
                android:layout_weight="2"
                android:textColor="#000000"
                android:gravity="center" />

            <Button
                android:id="@+id/clear_all_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all"
                android:textColor="#006FFD"/>
        </LinearLayout>

        <!-- Status Filter -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Status"
            android:textSize="16sp"
            android:textColor="#000000" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:flexWrap="wrap"
            app:alignItems="center">

            <!-- Wait for Approval -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/waitForApprovalStatusFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:checkable="true"
                app:checkedIcon="@drawable/icon_empty"
                app:cardBackgroundColor="@color/filter_item_background"
                app:strokeWidth="0dp">
                <TextView
                    android:id="@+id/waitForApprovalStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Wait for Approval"
                    android:textColor="#006FFD"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </com.google.android.material.card.MaterialCardView>

            <!-- In Progress -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/inProgressStatusFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:checkable="true"
                app:checkedIcon="@drawable/icon_empty"
                app:cardBackgroundColor="@color/filter_item_background"
                app:strokeWidth="0dp">
                <TextView
                    android:id="@+id/inProgressStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="In Progress"
                    android:textColor="#006FFD"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Delivering -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/deliveringStatusFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:checkable="true"
                app:checkedIcon="@drawable/icon_empty"
                app:cardBackgroundColor="@color/filter_item_background"
                app:strokeWidth="0dp">
                <TextView
                    android:id="@+id/deliveringStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Delivering"
                    android:textColor="#006FFD"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Delivered -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/deliveredStatusFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:checkable="true"
                app:checkedIcon="@drawable/icon_empty"
                app:cardBackgroundColor="@color/filter_item_background"
                app:strokeWidth="0dp">
                <TextView
                    android:id="@+id/deliveredStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Delivered"
                    android:textColor="#006FFD"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Cancelled -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cancelledStatusFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:checkable="true"
                app:checkedIcon="@drawable/icon_empty"
                app:cardBackgroundColor="@color/filter_item_background"
                app:strokeWidth="0dp">
                <TextView
                    android:id="@+id/cancelledStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Cancelled"
                    android:textColor="#006FFD"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Completed -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/completedStatusFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:checkable="true"
                app:checkedIcon="@drawable/icon_empty"
                app:cardBackgroundColor="@color/filter_item_background"
                app:strokeWidth="0dp">
                <TextView
                    android:id="@+id/completedStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Completed"
                    android:textColor="#006FFD"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </com.google.android.material.card.MaterialCardView>

        </com.google.android.flexbox.FlexboxLayout>

        <!-- Price Range Filter -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Price Range"
            android:textSize="16sp"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step: " />
            <Spinner
                android:id="@+id/step_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/step_values" />
        </LinearLayout>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/price_range_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="100"
            app:thumbHeight="15dp"
            app:trackColorInactive="@color/filter_item_background"
            app:trackHeight="7dp"
            app:values="@array/initial_slider_values"
            android:stepSize="10.0"/>

        <TextView
            android:id="@+id/price_range_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selected Price Range: $0 - $100"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />

        <!-- Date Filter -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Date"
            android:textSize="16sp"
            android:textColor="#000000" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:justifyContent="flex_start"
            app:alignContent="center">
            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/date_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/calendar_icon"/>

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="Selected Date will appear here" />
        </com.google.android.flexbox.FlexboxLayout>

        <!-- Customer Filter -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Customer"
            android:textSize="16sp"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/customer_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/profile_icon"/>

            <TextView
                android:id="@+id/selectedCustomerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selected Customer: None"
                android:textSize="14sp"
                android:paddingLeft="8dp" />
        </LinearLayout>

        <!-- Apply Filter Button -->
        <Button
            android:id="@+id/apply_filter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#006FFD"
            android:text="Apply Filters"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>